--- a/public/index.html
+++ b/public/index.html
@@ -12,8 +12,7 @@
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
     <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/grommet/2.0.0-beta.1/grommet.min.js"></script> -->
     <link href="https://fonts.googleapis.com/css?family=Work+Sans:300,400,500" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Cardo:400,700|Poppins:100,200,300,400,500,600,700|Roboto:100" rel="stylesheet">
-    <link href='http://grommet.io/assets/latest/css/grommet.min.css' rel='stylesheet' type='text/css'>
+    <link href="https://fonts.googleapis.com/css?family=Cardo:400,700|Jacques+Francois+Shadow|Poppins:100,200,300,400,500,600,700|Roboto:100" rel="stylesheet">    <link href='http://grommet.io/assets/latest/css/grommet.min.css' rel='stylesheet' type='text/css'>
     <link href="https://fonts.googleapis.com/css?family=Hind+Madurai:300,400,500,600,700|Playfair+Display:400,700" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css" integrity="sha256-NuCn4IvuZXdBaFKJOAcsU2Q3ZpwbdFisd5dux4jkQ5w=" crossorigin="anonymous" />
     <link rel="stylesheet" href="https://unpkg.com/tachyons@4.9.1/css/tachyons.min.css"/>
