--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,12 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.0/css/bulma.css" />
     <script defer src="https://use.fontawesome.com/releases/v5.0.8/js/all.js" integrity="sha384-SlE991lGASHoBfWbelyBPLsUlwY1GwNDJo3jSJO04KZ33K2bwfV9YBauFfnzvynJ" crossorigin="anonymous"></script>
     <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDm0SycGanfFTWTyqReuBHjpseMKYvuBQw&libraries=places"></script>
+    <!-- peer dependency -->
+    <script src="https://unpkg.com/react@16.3.1/umd/react.development.js"></script>
+    <!-- lib (change x.x.x for the version you would like) -->
+    <script src="https://unpkg.com/react-beautiful-dnd@x.x.x/dist/react-beautiful-dnd.js"></script>
+    <!-- needed to mount your react app -->
+    <script src="https://unpkg.com/react-dom@16.3.1/umd/react-dom.development.js"></script>
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
